# osu-map-fuser

./: .gitignore  CMakeLists -BASIC (it works.).txt  CMakeLists.txt  README.md  compile  main.cpp  run  todo
diagrams/: SkinElements.plantuml
osu-resources-2025.1218.0/osu.Game.Resources/Localisation/: DailyChallenge.resx
osuReplayEditorV3/ReplayEditor/: replayengine.cpp
res/skins/Legacy/: skin.ini
src/: utils.h
src/audio/: sfx.cpp  sfx.h  songs.cpp  songs.h
src/core/: application.cpp  application.h  toolbar.cpp  toolbar.h
src/data/: beatmap.h  skin.h
src/debug/: debug.h  toolbar.cpp
src/rendering/: renderer.cpp  renderer.h
src/resources/: utils.h
src/resources/skins/: legacy.cpp  legacy.cpp.bak  legacy.h
src/resources/skins/.dev/: samples.txt  sprites.txt
src/state/: beatmap.cpp  beatmap.h  manager.h  skin.cpp  skin.h
src/state/managers/: base.h  win.cpp  win.h
src/workarounds/: audioengine_config_override.cpp  audioengine_error_stubs.cpp  audioengine_file_exists_override.h.doesnt-work
